--- a/BlendShapeRenamer.vcxproj
+++ b/BlendShapeRenamer.vcxproj
@@ -125,10 +125,14 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="src\BlendShapeRenamer.cpp" />
+    <ClCompile Include="src\json11.cpp" />
     <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\RenameSettings.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\BlendShapeRenamer.hpp" />
+    <ClInclude Include="src\json11.hpp" />
+    <ClInclude Include="src\RenameSettings.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
