--- a/BlendShapeRenamer.vcxproj.filters
+++ b/BlendShapeRenamer.vcxproj.filters
@@ -21,9 +21,21 @@
     <ClCompile Include="src\BlendShapeRenamer.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="src\RenameSettings.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="src\json11.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\BlendShapeRenamer.hpp">
+      <Filter>ソース ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="src\RenameSettings.hpp">
+      <Filter>ソース ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="src\json11.hpp">
       <Filter>ソース ファイル</Filter>
     </ClInclude>
   </ItemGroup>
